# chrony-rs

./: .clippy.toml  .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CHRONY_ATLAS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  SEMVER.md  deny.toml
.cargo/: config.toml
.githooks/: README.md  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
crates/chrony-rs/: Cargo.toml  README.md
crates/chrony-rs-core/: Cargo.toml  README.md
crates/chrony-rs-core/benches/: parity_bench.rs
crates/chrony-rs-core/src/: addrfilt.rs  array.rs  client.rs  clientlog.rs  clock.rs  cmac_gnutls.rs  cmac_nettle.rs  cmdline.rs  cmdmon.rs  cmdparse.rs  court.rs  hash.rs  hash_gnutls.rs  hash_intmd5.rs  hash_nettle.rs  hash_nss.rs  hash_tomcrypt.rs  hwclock.rs  keys.rs  lib.rs  local.rs  logging.rs  manual.rs  md5.rs  memory.rs  nameserv.rs  ntp_auth.rs  ntp_io_linux.rs  ntp_signd.rs  ntp_sources.rs  nts_ke_cookie.rs  nts_ke_keydump.rs  nts_ke_record.rs  nts_ntp_auth.rs  nts_ntp_client.rs  nts_ntp_server.rs  nts_tls.rs  pktlength.rs  privops.rs  ptp.rs  (+32 more)
crates/chrony-rs-core/src/client/: tests.rs
crates/chrony-rs-core/src/clientlog/: tests.rs
crates/chrony-rs-core/src/cmac_nettle/: tests.rs
crates/chrony-rs-core/src/cmdline/: tests.rs
crates/chrony-rs-core/src/cmdmon/: tests.rs
crates/chrony-rs-core/src/config/: accessors.rs  diagnostics.rs  lexer.rs  mod.rs  model.rs  parser.rs  scan.rs
crates/chrony-rs-core/src/config/accessors/: tests.rs
crates/chrony-rs-core/src/keys/: tests.rs
crates/chrony-rs-core/src/logging/: tests.rs
crates/chrony-rs-core/src/nameserv/: tests.rs
crates/chrony-rs-core/src/ntp/: access.rs  create.rs  exp_ef.rs  ext.rs  instance.rs  lifecycle.rs  local_ts.rs  measurements.rs  mod.rs  mono_root.rs  ntp_report.rs  opmode.rs  packet.rs  params.rs  parse.rs  poll.rs  report.rs  rx_dispatch.rs  sample.rs  support.rs  sync.rs  test_a.rs  timestamp.rs  transmit.rs  tx_dispatch.rs
crates/chrony-rs-core/src/ntp/access/: tests.rs
crates/chrony-rs-core/src/ntp/create/: tests.rs
crates/chrony-rs-core/src/ntp/exp_ef/: tests.rs
crates/chrony-rs-core/src/ntp/lifecycle/: tests.rs
crates/chrony-rs-core/src/ntp/local_ts/: tests.rs
crates/chrony-rs-core/src/ntp/mono_root/: tests.rs
crates/chrony-rs-core/src/ntp/ntp_report/: tests.rs
crates/chrony-rs-core/src/ntp/opmode/: tests.rs
crates/chrony-rs-core/src/ntp/params/: tests.rs
crates/chrony-rs-core/src/ntp/parse/: tests.rs
crates/chrony-rs-core/src/ntp/poll/: tests.rs
crates/chrony-rs-core/src/ntp/report/: tests.rs
crates/chrony-rs-core/src/ntp/rx_dispatch/: tests.rs
crates/chrony-rs-core/src/ntp/sample/: tests.rs
crates/chrony-rs-core/src/ntp/support/: tests.rs
crates/chrony-rs-core/src/ntp/sync/: tests.rs
crates/chrony-rs-core/src/ntp/test_a/: tests.rs
crates/chrony-rs-core/src/ntp/transmit/: tests.rs
crates/chrony-rs-core/src/ntp/tx_dispatch/: tests.rs
crates/chrony-rs-core/src/ntp_auth/: tests.rs
crates/chrony-rs-core/src/ntp_io_linux/: tests.rs
crates/chrony-rs-core/src/ntp_signd/: tests.rs
crates/chrony-rs-core/src/ntp_sources/: tests.rs
crates/chrony-rs-core/src/nts_ke_cookie/: tests.rs
crates/chrony-rs-core/src/nts_ke_keydump/: tests.rs
crates/chrony-rs-core/src/nts_ke_record/: tests.rs
crates/chrony-rs-core/src/nts_ntp_auth/: tests.rs
crates/chrony-rs-core/src/nts_ntp_client/: tests.rs
crates/chrony-rs-core/src/nts_ntp_server/: tests.rs
crates/chrony-rs-core/src/privops/: tests.rs
crates/chrony-rs-core/src/ptp/: tests.rs
crates/chrony-rs-core/src/refclock/: tests.rs
crates/chrony-rs-core/src/refclock_shm/: tests.rs
crates/chrony-rs-core/src/refclock_sock/: tests.rs
crates/chrony-rs-core/src/reference/: tests.rs
crates/chrony-rs-core/src/rtc/: tests.rs
crates/chrony-rs-core/src/rtc_linux/: tests.rs
crates/chrony-rs-core/src/sched/: tests.rs
crates/chrony-rs-core/src/siv_nettle/: tests.rs
crates/chrony-rs-core/src/siv_nettle_int/: tests.rs
crates/chrony-rs-core/src/socket/: tests.rs
crates/chrony-rs-core/src/sources/: combine.rs  mod.rs  reachability.rs  registry.rs  selection.rs  source.rs
crates/chrony-rs-core/src/sources/combine/: tests.rs
crates/chrony-rs-core/src/sources/registry/: tests.rs
crates/chrony-rs-core/src/sys_generic/: tests.rs
crates/chrony-rs-core/src/sys_linux/: tests.rs
crates/chrony-rs-core/src/sys_timex/: tests.rs
crates/chrony-rs-core/tests/: auth_integration.rs  cve_regression.rs  doc_tests.rs  pipeline.rs  pipeline_integration.rs  proptest.rs
crates/chrony-rs-io/: Cargo.toml  README.md
crates/chrony-rs-io/src/: cmdmon.rs  config_loader.rs  driver.rs  key_io.rs  lib.rs  logging.rs  ntp_io.rs  privops.rs  rtc_linux_io.rs  shm_io.rs  sock_io.rs  socket.rs
crates/chrony-rs-io/tests/: behavioral.rs  cmdmon.rs  config_loader.rs  event_loop.rs  logging.rs  ntp_io.rs  privops.rs  tcp_unix.rs  udp.rs
crates/chrony-rs/src/: lib.rs
crates/chrony-rs/tests/: umbrella.rs
crates/chronyc-rs/: Cargo.toml  README.md
crates/chronyc-rs/src/: main.rs
crates/chronyc-rs/tests/: cli.rs
crates/chronyc-rs/tests/fixtures/: activity.json  serverstats.json  sources.json  sourcestats.json  tracking.json
crates/chronyd-rs/: Cargo.toml  README.md
crates/chronyd-rs/src/: main.rs  metrics.rs  ntp_manager.rs  nts_ke_server.rs
crates/chronyd-rs/tests/: cli.rs
crates/chronyd-rs/tests/fixtures/: bad.conf  sample-trace.json
docs/: README.md  architecture.md  chronyc-parity.md  compatibility.md  config-atlas.md  deployment-boundary.md  distro-defaults.md  filtering-atlas.md  gap-analysis.md  io-diff-testing.md  negative-capabilities.md  oracle.md  packet-atlas.md  performance-characteristics.md  port-parity.md  (+6 more)
fuzz/: Cargo.toml  kani-proofs.rs
fuzz/artifacts/: .gitkeep
fuzz/corpus/: .gitkeep
fuzz/fuzz_targets/: cmdmon-validate.rs  config-parse.rs  ntp-header.rs  packet-decode.rs
xtask/: Cargo.toml  LICENSE
xtask/src/: capture_trace.rs  compare_diagnostics.rs  generate.rs  main.rs  parity.rs  verify.rs
xtask/tests/: integration.rs
(+211 files in other folders)
