[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
homepage.workspace = true
description = "Build/automation tasks for chrony-rs: documentation generation and freshness gating."
readme = "README.md"

[lints]
workspace = true

[dependencies]
chrony-rs-core = { version = "0.2", path = "../crates/chrony-rs-core" }
serde_json = { workspace = true }
syn = { version = "2", features = ["full", "visit"] }
