[package]
name = "chrony-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "A forensic Rust reconstruction of chrony time-discipline behavior (umbrella crate re-exporting chrony-rs-core)."
readme = "README.md"
keywords = ["chrony", "ntp", "time", "clock", "forensic"]
categories = ["date-and-time"]

[dependencies]
chrony-rs-core = { version = "0.1.0", path = "../chrony-rs-core" }
